compliance-classifier-frontend/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: compliance-classifier
  labels:
    name: compliance-classifier
